--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -7,11 +7,11 @@
 	<div class="colstack_item">
 		<form action="/user/edit/username/submit/" method="post">
 			<div class="formrow">
-				<div class="formitem"><a>Current Username</a></div>
-				<div class="formitem">{{.CurrentUser.Name}}</div>
+				<div class="formitem formlabel"><a>Current Username</a></div>
+				<div class="formitem formlabel">{{.CurrentUser.Name}}</div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><a>New Username</a></div>
+				<div class="formitem formlabel"><a>New Username</a></div>
 				<div class="formitem"><input name="account-new-username" type="text" /></div>
 			</div>
 			<div class="formrow">
