--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -7,15 +7,15 @@
 	<div class="colstack_item">
 		<form action="/user/edit/critical/submit/" method="post">
 			<div class="formrow">
-				<div class="formitem"><a>Current Password</a></div>
+				<div class="formitem formlabel"><a>Current Password</a></div>
 				<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><a>New Password</a></div>
+				<div class="formitem formlabel"><a>New Password</a></div>
 				<div class="formitem"><input name="account-new-password" type="password" placeholder="*****" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><a>Confirm Password</a></div>
+				<div class="formitem formlabel"><a>Confirm Password</a></div>
 				<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
 			</div>
 			<div class="formrow">
