--- a/templates/panel-group-edit.html
+++ b/templates/panel-group-edit.html
@@ -14,15 +14,15 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>{{.Name}} Group</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_group" class="colstack_item">
 		<form action="/panel/groups/edit/submit/{{.ID}}?session={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
-			<div class="formitem"><a>Name</a></div>
+			<div class="formitem formlabel"><a>Name</a></div>
 			<div class="formitem"><input name="group-name" type="text" value="{{.Name}}" placeholder="General Forum" /></div>
 		</div>
 		{{if .CurrentUser.Perms.EditGroup}}
 		<div class="formrow">
-			<div class="formitem"><a>Type</a></div>
+			<div class="formitem formlabel"><a>Type</a></div>
 			<div class="formitem">
 				<select name="group-type"{{if .DisableRank}} disabled{{end}}>
 					<option{{if eq .Rank "Guest"}} selected{{end}} disabled>Guest</option>
@@ -34,7 +34,7 @@
 			</div>
 		</div>{{end}}
 		<div class="formrow">
-			<div class="formitem"><a>Tag</a></div>
+			<div class="formitem formlabel"><a>Tag</a></div>
 			<div class="formitem"><input name="group-tag" type="text" value="{{.Tag}}" placeholder="VIP" /></div>
 		</div>
 		<div class="formrow">
