--- a/templates/panel-plugins.html
+++ b/templates/panel-plugins.html
@@ -4,15 +4,15 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Plugins</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_plugins" class="colstack_item">
 		{{range .ItemList}}
-		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;">
-			<a {{if .URL}}href="{{.URL}}" {{end}}class="editable_block" style="font-size: 20px;position:relative;top: -2px;">{{.Name}}</a><br />
+		<div class="rowitem editable_parent">
+			<a {{if .URL}}href="{{.URL}}" {{end}}class="editable_block" class="panel_upshift">{{.Name}}</a><br />
 			<small style="margin-left: 2px;">Author: {{.Author}}</small>
 			<span style="float: right;">
-				{{if .Settings}}<a href="/panel/settings/" class="username">Settings</a>{{end}}
-				{{if .Active}}<a href="/panel/plugins/deactivate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Deactivate</a>
-				{{else}}<a href="/panel/plugins/activate/{{.UName}}?session={{$.CurrentUser.Session}}" class="username">Activate</a>{{end}}
+				{{if .Settings}}<a href="/panel/settings/" class="panel_tag">Settings</a>{{end}}
+				{{if .Active}}<a href="/panel/plugins/deactivate/{{.UName}}?session={{$.CurrentUser.Session}}" class="panel_tag">Deactivate</a>
+				{{else}}<a href="/panel/plugins/activate/{{.UName}}?session={{$.CurrentUser.Session}}" class="panel_tag">Activate</a>{{end}}
 			</span>
 		</div>
 		{{end}}
