--- a/templates/register.html
+++ b/templates/register.html
@@ -5,19 +5,19 @@
 <div class="rowblock">
 	<form action="/accounts/create/submit/" method="post">
 		<div class="formrow">
-			<div class="formitem"><a>Account Name</a></div>
+			<div class="formitem formlabel"><a>Account Name</a></div>
 			<div class="formitem"><input name="username" type="text" placeholder="Account Name" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><a>Email</a></div>
+			<div class="formitem formlabel"><a>Email</a></div>
 			<div class="formitem"><input name="email" type="email" placeholder="joe.doe@example.com" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><a>Password</a></div>
+			<div class="formitem formlabel"><a>Password</a></div>
 			<div class="formitem"><input name="password" type="password" autocomplete="new-password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><a>Confirm Password</a></div>
+			<div class="formitem formlabel"><a>Confirm Password</a></div>
 			<div class="formitem"><input name="confirm_password" type="password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
