--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -4,8 +4,7 @@
 	-webkit-box-sizing: border-box;
 }
 
-body
-{
+body {
 	font-family: arial;
 	padding-bottom: 8px;
 	background-image: url('/static/test_bg2.svg');
@@ -17,10 +16,7 @@ body
 .user_content { font-family: Segoe UI Emoji, arial; }
 }
 
-/*.move_left{float: left;position: relative;left: 50%;}
-.move_right{float: left;position: relative;left: -50%;}*/
-ul
-{
+ul {
 	padding-left: 0px;
 	padding-right: 0px;
 	height: 36px;
@@ -29,29 +25,25 @@ ul
 	background-color: white;
 	margin-bottom: 12px;
 }
-li
-{
+li {
 	height: 35px;
 	padding-left: 10px;
 	padding-top: 8px;
 	padding-bottom: 8px;
 }
 li:hover { background: rgb(250,250,250); }
-li a
-{
+li a {
 	text-decoration: none;
 	/*color: #515151;*/
 	color: black;
 	font-size: 17px;
 }
-.menu_left
-{
+.menu_left {
 	float: left;
 	border-right: 1px solid #ccc;
 	padding-right: 10px;
 }
-.menu_right
-{
+.menu_right {
 	float: right;
 	border-left: 1px solid #ccc;
 	padding-right: 10px;
@@ -90,13 +82,8 @@ li a
 	color: black;
 	font-weight: bold;
 }
-.selectedAlert .alert_counter {
-	display: none;
-}
-.menu_alerts .alertList {
-	display: none;
-	text-transform: none;
-}
+.selectedAlert .alert_counter { display: none; }
+.menu_alerts .alertList { display: none; }
 .selectedAlert .alertList {
 	position: absolute;
 	top: 51px;
@@ -104,26 +91,27 @@ li a
 	background: white;
 	font-size: 10px;
 	line-height: 16px;
-	width: 156px;
+	width: 300px;
 	right: calc(5% + 7px);
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
+	margin-bottom: 10px;
 }
 .alertItem {
 	padding: 8px;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	padding-top: 15px;
+	padding-bottom: 16px;
 }
 .alertItem.withAvatar {
-	/*background-image: url('/uploads/avatar_1.jpg');*/
-	background-size: 36px;
+	background-size: 60px;
 	background-repeat: no-repeat;
-	text-align: center;
 	padding-right: 12px;
-	padding-left: 42px;
-	height: 46px;
+	padding-left: 68px;
+	height: 50px;
 }
 .alertItem.withAvatar:not(:last-child) {
 	border-bottom: 1px solid rgb(230,230,230);
@@ -131,26 +119,25 @@ li a
 .alertItem .text {
 	overflow: hidden;
 	text-overflow: ellipsis;
-	height: 30px;
+	height: 40px;
 	width: 100%;
 	color: black;
-	font-size: 10px;
-	font-weight: bold;
+	font-size: 13px;
+	white-space: nowrap;
+	font-weight: normal;
 }
-.alertItem .text.smaller {
-	font-size: 9px;
+.alertItem:not(.withAvatar) {
+	margin-left: 5px;
 }
 
-.container
-{
+.container {
 	width: 90%;
 	padding: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.rowblock
-{
+.rowblock {
 	border: 1px solid #ccc;
 	width: 100%;
 	padding: 0px;
@@ -158,8 +145,7 @@ li a
 }
 .rowblock:empty { display: none; }
 
-.colblock_left
-{
+.colblock_left {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -167,8 +153,7 @@ li a
 	float: left;
 	margin-right: 8px;
 }
-.colblock_right
-{
+.colblock_right {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -176,24 +161,20 @@ li a
 	overflow: hidden;
 	word-wrap: break-word;
 }
-.colblock_left:empty { display: none; }
-.colblock_right:empty { display: none; }
+.colblock_left:empty, .colblock_right:empty { display: none; }
 
 /* The new method of doing columns layouts, colblock is now deprecated :( */
-.colstack_left
-{
+.colstack_left {
 	float: left;
 	width: 30%;
 	margin-right: 8px;
 }
-.colstack_right
-{
+.colstack_right {
 	float: left;
 	width: 65%;
 	width: calc(70% - 15px);
 }
-.colstack_item
-{
+.colstack_item {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -211,6 +192,7 @@ li a
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 12px;
 	margin-left: 5px;
+	margin-top: 2px;
 }
 .grid_item {
 	border: 1px solid #ccc;
@@ -225,76 +207,42 @@ li a
 	padding-bottom: 12px;
 	font-size: 16px;
 }
-.grid_istat {
-	margin-bottom: 5px;
-}
+.grid_istat { margin-bottom: 5px; }
 
 .stat_green { background-color: lightgreen; border-color: green; }
 .stat_orange { background-color: #ffe4b3; border-color: orange; }
 .stat_red { background-color: #ffb2b2; border-color: red; }
 .stat_disabled { background-color: lightgray; border-color: gray; }
 
-.rowitem
-{
+.rowitem {
 	width: 100%;
-	padding-left: 8px;
+	/*padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 17px;
 	padding-bottom: 12px;
 	font-weight: bold;
-	text-transform: uppercase;
+	text-transform: uppercase;*/
+	padding-left: 10px;
+	padding-top: 14px;
+	padding-bottom: 12px;
+	padding-right: 10px;
 	background-color: white;
 }
-.rowitem.passive
-{
+.rowitem.passive {
 	font-weight: normal;
 	text-transform: none;
 }
-.rowitem:not(:last-child)
-{
+.rowitem:not(:last-child) {
 	border-bottom: 1px dotted #ccc;
 }
-.rowitem a
-{
+.rowitem a {
 	text-decoration: none;
 	color: black;
 }
 .rowitem a:hover { color: silver; }
 .opthead { display: none; }
 
-.col_left
-{
-	width: 30%;
-	float: left;
-}
-.col_right
-{
-	width: 69%;
-	overflow: hidden;
-}
-.colitem
-{
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-top: 17px;
-	padding-bottom: 12px;
-	font-weight: bold;
-	text-transform: uppercase;
-}
-.colitem.passive
-{
-	font-weight: normal;
-	text-transform: none;
-}
-.colitem a
-{
-	text-decoration: none;
-	color: black;
-}
-.colitem a:hover { color: silver; }
-
-.formrow
-{
+.formrow {
 	width: 100%;
 	background-color: white;
 }
@@ -307,42 +255,49 @@ li a
 .formrow:after { clear: both; }
 .formrow:not(:last-child) { border-bottom: 1px dotted #ccc; }
 
-.formitem
-{
+.formitem {
 	float: left;
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-top: 13px;
-	padding-bottom: 8px;
-	font-weight: bold;
+	padding: 10px;
+	min-width: 20%;
+	/*font-size: 17px;*/
+	font-weight: normal;
 }
-.formitem:first-child { font-weight: bold; }
 .formitem:not(:last-child) { border-right: 1px dotted #ccc; }
 .formitem.invisible_border { border: none; }
 
 /* Mostly for textareas */
 .formitem:only-child { width: 100%; }
-.formitem textarea
-{
+.formitem textarea {
 	width: 100%;
 	height: 100px;
 	outline-color: #8e8e8e;
 }
-.formitem:has-child()
-{
+.formitem:has-child() {
 	margin: 0 auto;
 	float: none;
 }
+.formitem:not(:only-child) input, .formitem:not(:only-child) select { padding: 3px;/*5px;*/ }
+.formitem:not(:only-child).formlabel {
+	padding-top: 15px;/*18px;*/
+	padding-bottom: 12px;/*16px;*/
+	/*padding-left: 15px;*/
+}
+.formbutton {
+	padding: 7px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 15px;
+	border-color: #ccc;
+}
 
-button
-{
+button {
 	background: white;
 	border: 1px solid #8e8e8e;
 }
 
 /* Topics */
-.topic_status
-{
+.topic_status {
 	text-transform: none;
 	margin-left: 8px;
 	padding-left: 2px;
@@ -367,8 +322,7 @@ button
 	background: linear-gradient(to bottom, #eaeaea, hsl(0,0%,79%));
 }
 
-.username
-{
+.username, .panel_tag {
 	text-transform: none;
 	margin-left: 0px;
 	padding-left: 4px;
@@ -382,11 +336,18 @@ button
 	border-width: 1px;
 	font-size: 15px;
 }
-button.username
-{
+button.username {
 	position: relative;
 	top: -0.25px;
 }
+
+/* We'll be rewriting the profiles soon too! */
+/*.username.real_username {
+	color: #404040;
+	font-size: 16px;
+	padding-right: 4px;
+}
+.username.real_username:hover { color: black; }*/
 
 .postQuote {
 	border: rgb(200,200,210);
@@ -400,42 +361,23 @@ button.username
 	border-width: 1px;
 }
 
-.tag-mini
-{
-	text-transform: none;
-	margin-left: 0px;
-	padding-left: 3px;
-	padding-right: 3px;
-	padding-top: 1.5px;
-	padding-bottom: 0px;
-	color: #505050; /* 80,80,80 */
-	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
-	border-width: 1px;
-	font-size: 10px;
-}
-
 .mention { font-weight: bold; }
 .show_on_edit { display: none; }
 
-.alert
-{
+.alert {
 	display: block;
 	padding: 5px;
 	margin-bottom: 10px;
 	border: 1px solid #ccc;
 }
-.alert_success
-{
+.alert_success {
 	display: block;
 	padding: 5px;
-	border: 1px solid A2FC00;
+	border: 1px solid #A2FC00;
 	margin-bottom: 10px;
-	background-color: DAF7A6;
+	background-color: #DAF7A6;
 }
-.alert_error
-{
+.alert_error {
 	display: block;
 	padding: 5px;
 	border: 1px solid #FF004B;
@@ -483,6 +425,25 @@ button.username
 	float: right;
 	border-left: solid 1px #eaeaea;
 }
+
+.like_label:before {
+	content: "😀";
+}
+.edit_label:before {
+	content: "🖊️";
+}
+.trash_label:before {
+	content: "🗑️";
+}
+.flag_label:before {
+	content: "🚩";
+}
+
+.mod_button {
+	margin-right: 4px;
+}
+.simple > .real_username { color: #404040; font-size: 17px; }
+.simple > .user_content { background: none; }
 
 .simple { background-color: white; }
 .post_item:not(.simple) {
@@ -576,7 +537,116 @@ button.username
 .prev_button { left: 14px; }
 .next_button { right: 14px; }
 
-/* Media Queries from Simple. Probably useless in Conflux */
+.head_tag_upshift {
+	float: right;
+	position: relative;
+	top: -2px;
+}
+
+/* Control Panel */
+.panel_upshift:visited {
+	color: black;
+}
+
+.tag-mini {
+	margin-left: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+
+	color: black;
+	font-size: 12px;
+}
+
+.panel_tag {
+	padding-left: 0px;
+	padding-right: 0px;
+	border: none;
+	background: none;
+	color: #202020;
+	font-size: 14px;
+}
+
+.panel_floater {
+	float: right;
+}
+#panel_groups > .rowitem > .panel_floater {
+	float: none;
+}
+#panel_groups > .rowitem > .panel_floater > .panel_right_button {
+	float: right;
+}
+#panel_forums > .rowitem > .panel_floater {
+	float: none;
+}
+#panel_forums > .rowitem > .panel_floater > .panel_buttons {
+	float: right;
+}
+
+.panel_rank_tag, .forum_preset, .forum_active {
+	float: none;
+	color: #202020 !important;
+	font-size: 11px;
+}
+.panel_rank_tag_admin:before {
+	content: "Admins";
+}
+.panel_rank_tag_mod:before {
+	content: "Mods";
+}
+.panel_rank_tag_banned:before {
+	content: "Banned";
+}
+.panel_rank_tag_guest:before {
+	content: "Guests";
+}
+.panel_rank_tag_member:before {
+	content: "Members";
+}
+
+.forum_preset_announce:after {
+	content: "Announcements";
+}
+.forum_preset_members:after {
+	content: "Member Only";
+}
+.forum_preset_staff:after {
+	content: "Staff Only";
+}
+.forum_preset_admins:after {
+	content: "Admin Only";
+}
+.forum_preset_archive:after {
+	content: "Archive";
+}
+.forum_preset_all:after {
+	content: "Public";
+}
+.forum_preset_custom, .forum_preset_ {
+	display: none !important;
+}
+.forum_active_Hide:before {
+	content: "Hidden";
+}
+.forum_active_Hide + .forum_preset:before {
+	content: " | ";
+}
+.forum_active_Show {
+	display: none !important;
+}
+
+.theme_row > .panel_floater > .panel_right_button {
+	margin-left: 5px;
+}
+
+@media(max-width: 1300px) {
+	.theme_row {
+			background-image: none !important;
+	}
+}
+
+/* The Media Queries */
 @media (max-width: 880px) {
 	li {
 		height: 29px;
@@ -589,21 +659,23 @@ button.username
 		height: 30px;
 		margin-top: 8px;
 	}
-	.menu_left { padding-right: 9px; }
-	.menu_right { padding-right: 9px; }
+	.menu_left, .menu_right { padding-right: 9px; }
 	.menu_alerts {
 		padding-left: 7px;
 		padding-right: 7px;
 		font-size: 18px;
 	}
-	
-	body { padding-left: 4px; padding-right: 4px; margin: 0px !important; width: 100% !important; height: 100% !important; overflow-x: hidden; }
+
+	body {
+		padding-left: 4px;
+		padding-right: 4px;
+		margin: 0px !important;
+		width: 100% !important;
+		height: 100% !important;
+		overflow-x: hidden;
+	}
 	.container { width: auto; }
 	.selectedAlert .alertList { top: 37px; right: 4px; }
-}
-
-@media (max-width: 810px) {
-	.rowitem { text-transform: none; }
 }
 
 @media (max-width: 680px) {
@@ -615,10 +687,9 @@ button.username
 	}
 	li a { font-size: 14px; }
 	ul { height: 26px; }
-	.menu_left { padding-right: 7px; }
-	.menu_right { padding-right: 7px; }
+	.menu_left, .menu_right { padding-right: 7px; }
 	.menu_create_topic { display: none; }
-	
+
 	.menu_alerts {
 		padding-left: 4px;
 		padding-right: 4px;
@@ -626,7 +697,7 @@ button.username
 		padding-top: 1px;
 	}
 	.selectedAlert .alertList { top: 33px; }
-	
+
 	.hide_on_mobile { display: none; }
 	.prev_button, .next_button { top: auto;bottom: 5px; }
 	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
@@ -636,8 +707,30 @@ button.username
 @media (max-width: 470px) {
 	ul { margin-bottom: 10px; }
 	.menu_overview, .menu_profile, .hide_on_micro { display: none; }
+	.selectedAlert .alertList {
+		width: 156px;
+		margin-bottom: 5px;
+	}
+	.alertItem.withAvatar {
+		background-size: 36px;
+		text-align: center;
+		padding-left: 42px;
+		height: 46px;
+	}
+	.alertItem {
+		padding: 8px;
+	}
+	.alertItem .text {
+		height: 30px;
+		font-size: 10px;
+		font-weight: bold;
+		white-space: normal;
+	}
+	.alertItem .text.smaller {
+		font-size: 9px;
+	}
 	.post_container { overflow: visible !important; }
-	
+
 	.post_item {
 		background-position: 0px 2px !important;
 		background-size: 64px 64px !important;
@@ -679,7 +772,7 @@ button.username
 	.user_content.nobuttons { min-height: 100.5px !important; }
 	.the_name { font-size: 15px; }
 	.post_tag { font-size: 12px; }
-	
+
 	.container { width: 100% !important; }
 }
 
