--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,11 @@
 <div class="rowblock">
 	<form action="/accounts/login/submit/" method="post">
 		<div class="formrow">
-			<div class="formitem"><a>Account Name</a></div>
+			<div class="formitem formlabel"><a>Account Name</a></div>
 			<div class="formitem"><input name="username" type="text" placeholder="Account Name" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><a>Password</a></div>
+			<div class="formitem formlabel"><a>Password</a></div>
 			<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
