--- a/templates/panel-adminlogs.html
+++ b/templates/panel-adminlogs.html
@@ -14,7 +14,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Administration Logs</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_adminlogs" class="colstack_item">
 		{{range .Logs}}
 		<div class="rowitem" style="font-weight: normal;text-transform: none;">
 			<a style="font-size: 17px;">{{.Action}}</a><br />
