--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -1,48 +1,50 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
 <script>var form_vars = {
-	'forum-active': ['Hide','Show'],
-	'forum-preset': ['all','announce','members','staff','admins','archive','custom']};
+	'forum_active': ['Hide','Show'],
+	'forum_preset': ['all','announce','members','staff','admins','archive','custom']};
 </script>
+
 <div class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Forums</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_forums" class="colstack_item">
 		{{range .ItemList}}
-		<div class="rowitem editable_parent" style="font-weight: normal;{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
-			<a data-field="forum-name" data-type="text" class="editable_block" style="font-size: 20px;position:relative;top: -2px;text-transform: none;{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
-			<span style="float: right;">
-			<span data-field="forum-active" data-type="list" class="username editable_block hide_on_zero" title="Hidden" style="color: black;{{if .Active}}display:none;" data-value="1"{{else}}" data-value="0"{{end}}>🕵️</span>
-			
-			{{if .PresetEmoji}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" title="{{.PresetLang}}">{{.PresetEmoji}}</span>
-			{{else if .PresetLang}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block">{{.PresetLang}}</span>{{else}}<span data-field="forum-preset" data-type="list" data-value="{{.Preset}}" class="username editable_block" style="display:none;">{{.PresetLang}}</span>{{end}}
-			
-			{{if gt .ID 0}}<a class="username edit_fields hide_on_edit">Edit</a>
-			<a href="/panel/forums/edit/submit/{{.ID}}"><button class='username submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
-			{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="username">Delete</a>{{end}}
+		<div class="rowitem editable_parent" style="{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
+			<a data-field="forum_name" data-type="text" class="editable_block panel_upshift" style="{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
+			<span class="panel_floater">
+			<span data-field="forum_active" data-type="list" class="panel_tag editable_block forum_active {{if .Active}}forum_active_Show" data-value="1{{else}}forum_active_Hide" data-value="0{{end}}" title="Hidden"></span>
+
+			<span data-field="forum_preset" data-type="list" data-value="{{.Preset}}" class="panel_tag editable_block forum_preset forum_preset_{{.Preset}}" title="{{.PresetLang}}"></span>
+			<span class="panel_buttons">
+				{{if gt .ID 0}}<a class="panel_tag edit_fields hide_on_edit panel_right_button">Edit</a>
+				<a class="panel_right_button" href="/panel/forums/edit/submit/{{.ID}}"><button class='panel_tag submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
+				{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">Delete</a>{{end}}
+			</span>
 			</span>
 		</div>
 		{{end}}
 	</div>
+
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Add Forum</a></div>
 	</div>
 	<div class="colstack_item">
 		<form action="/panel/forums/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
-				<div class="formitem"><a>Forum Name</a></div>
-				<div class="formitem"><input name="forum-name" type="text" /></div>
+				<div class="formitem formlabel"><a>Forum Name</a></div>
+				<div class="formitem"><input name="forum-name" type="text" placeholder="Super Secret Forum" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><a>Hidden?</a></div>
+				<div class="formitem formlabel"><a>Hidden?</a></div>
 				<div class="formitem"><select name="forum-active">
 					<option value="1">Yes</option>
 					<option value="0">No</option>
 				</select></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><a>Preset</a></div>
+				<div class="formitem formlabel"><a>Preset</a></div>
 				<div class="formitem"><select name="forum-preset">
 					<option selected value="all">Everyone</option>
 					<option value="announce">Announcements</option>
@@ -59,4 +61,5 @@
 		</form>
 	</div>
 </div>
+
 {{template "footer.html" . }}
