--- a/templates/panel-setting.html
+++ b/templates/panel-setting.html
@@ -4,15 +4,15 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Edit Setting</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_setting" class="colstack_item">
 		<form action="/panel/settings/edit/submit/{{.Something.Name}}?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
-				<div class="formitem"><a>Setting Name</a></div>
-				<div class="formitem">{{.Something.Name}}</div>
+				<div class="formitem formlabel"><a>Setting Name</a></div>
+				<div class="formitem formlabel">{{.Something.Name}}</div>
 			</div>
 			{{if eq .Something.Type "list"}}
 			<div class="formrow">
-				<div class="formitem"><a>Setting Value</a></div>
+				<div class="formitem formlabel"><a>Setting Value</a></div>
 				<div class="formitem">
 					<select name="setting-value">
 					{{range .ItemList}}<option{{if .Selected}} selected{{end}} value="{{.Value}}">{{.Label}}</option>{{end}}
@@ -21,11 +21,11 @@
 			</div>
 			{{else if eq .Something.Type "bool"}}
 			<div class="formrow">
-				<div class="formitem"><a>Setting Value</a></div>
+				<div class="formitem formlabel"><a>Setting Value</a></div>
 				<div class="formitem"><input name="setting-value" type="checkbox"{{if eq .Something.Content "1"}} checked{{end}} /></div>
 			</div>
 			{{else}}<div class="formrow">
-				<div class="formitem"><a>Setting Value</a></div>
+				<div class="formitem formlabel"><a>Setting Value</a></div>
 				<div class="formitem"><input name="setting-value" type="text" value="{{.Something.Content}}" /></div>
 			</div>{{end}}
 			<div class="formrow">
