--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -1,21 +1,28 @@
 {{template "header.html" . }}
 {{template "panel-menu.html" . }}
-<style type="text/css">.rowitem::after {content:"";display:block;clear:both;}</style>
+<style type="text/css">
+.rowitem::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+</style>
+
 <div class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Primary Themes</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_primary_themes" class="colstack_item panel_themes">
 		{{range .PrimaryThemes}}
-		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
+		<div class="theme_row rowitem editable_parent" style="{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
 			<span style="float: left;">
-				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
-				<small style="margin-left: 2px;">Author: {{.Creator}}</small>
+				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 17px;">{{.FriendlyName}}</a><br />
+				<small class="panel_theme_author" style="margin-left: 2px;">Author: <a href="//{{.URL}}">{{.Creator}}</a></small>
 			</span>
-			<span style="float: right;">
-				{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
-				{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
-				{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
+			<span class="panel_floater">
+				{{if .MobileFriendly}}<span class="panel_tag panel_theme_mobile" title="Mobile Friendly">📱</span>{{end}}
+				{{if .Tag}}<span class="panel_tag panel_theme_tag">{{.Tag}}</span>{{end}}
+				{{if .Active}}<span class="panel_tag panel_right_button">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">Make Default</a>{{end}}
 			</span>
 		</div>
 		{{end}}
@@ -23,17 +30,17 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem rowhead"><a>Variant Themes</a></div>
 	</div>
-	<div class="colstack_item">
+	<div id="panel_variant_themes" class="colstack_item panel_themes">
 		{{range .VariantThemes}}
-		<div class="rowitem editable_parent" style="font-weight: normal;text-transform: none;{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
+		<div class="theme_row rowitem editable_parent" style="{{if .FullImage}}background-image: url('/static/{{.FullImage}}');background-position: center;background-size: 50%;background-repeat: no-repeat;{{end}}">
 			<span style="float: left;">
-				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 20px;">{{.FriendlyName}}</a><br />
-				<small style="margin-left: 2px;">Author: {{.Creator}}</small>
+				<a href="/panel/themes/{{.Name}}" class="editable_block" style="font-size: 17px;">{{.FriendlyName}}</a><br />
+				<small class="panel_theme_author" style="margin-left: 2px;">Author: <a href="//{{.URL}}">{{.Creator}}</a></small>
 			</span>
-			<span style="float: right;">
-				{{if .MobileFriendly}}<span class="username" title="Mobile Friendly">📱</span>{{end}}
-				{{if .Tag}}<span class="username">{{.Tag}}</span>{{end}}
-				{{if .Active}}<span class="username">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="username">Make Default</a>{{end}}
+			<span class="panel_floater">
+				{{if .MobileFriendly}}<span class="panel_tag panel_theme_mobile" title="Mobile Friendly">📱</span>{{end}}
+				{{if .Tag}}<span class="panel_tag panel_theme_tag">{{.Tag}}</span>{{end}}
+				{{if .Active}}<span class="panel_tag panel_right_button">Default</span>{{else}}<a href="/panel/themes/default/{{.Name}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">Make Default</a>{{end}}
 			</span>
 		</div>
 		{{end}}
