--- a/themes/tempra-cursive/public/main.css
+++ b/themes/tempra-cursive/public/main.css
@@ -4,8 +4,7 @@
 	-webkit-box-sizing: border-box;
 }
 
-body
-{
+body {
 	font-family: cursive;
 	padding-bottom: 8px;
 }
@@ -15,8 +14,7 @@ body
 .user_content { font-family: Segoe UI Emoji, arial; }
 }
 
-ul
-{
+ul {
 	padding-left: 0px;
 	padding-right: 0px;
 	height: 36px;
@@ -25,31 +23,27 @@ ul
 	background-color: white;
 	margin-bottom: 12px;
 }
-li
-{
+li {
 	height: 35px;
 	padding-left: 10px;
 	padding-top: 8px;
 	padding-bottom: 8px;
 }
 li:hover { background: rgb(250,250,250); }
-li a
-{
+li a {
 	text-decoration: none;
 	/*color: #515151;*/
 	color: black;
 	font-size: 17px;
 }
-.menu_left
-{
+.menu_left {
 	float: left;
 	border-right: 1px solid #ccc;
 	padding-right: 10px;
 	font-family: cursive;
 	padding-top: 4px;
 }
-.menu_right
-{
+.menu_right {
 	float: right;
 	border-left: 1px solid #ccc;
 	padding-right: 10px;
@@ -74,25 +68,16 @@ li a
 	padding-top: 2.5px;
 	height: 14px;
 	text-align: center;
-	
 	border: white solid 1px;
 }
-.menu_alerts .alert_counter:empty {
-	display: none;
-}
+.menu_alerts .alert_counter:empty { display: none; }
 
-.selectedAlert {
+.selectedAlert, .selectedAlert:hover {
 	background: white;
 	color: black;
 }
-.selectedAlert:hover {
-	background: white;
-	color: black;
-}
-.menu_alerts .alertList {
-	display: none;
-	text-transform: none;
-}
+.menu_alerts .alertList { display: none; }
+
 .selectedAlert .alertList {
 	position: absolute;
 	top: 51px;
@@ -100,24 +85,27 @@ li a
 	background: white;
 	font-size: 10px;
 	line-height: 16px;
-	width: 135px;
+	width: 300px;
 	right: calc(5% + 7px);
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
+	margin-bottom: 10px;
 }
 .alertItem {
 	padding: 8px;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	padding-top: 15px;
+	padding-bottom: 16px;
 }
 .alertItem.withAvatar {
-	background-size: auto 56px;
+	background-size: 60px;
 	background-repeat: no-repeat;
-	text-align: right;
 	padding-right: 12px;
-	height: 46px;
+	padding-left: 68px;
+	height: 50px;
 }
 .alertItem.withAvatar:not(:last-child) {
 	border-bottom: 1px solid rgb(230,230,230);
@@ -126,24 +114,24 @@ li a
 	overflow: hidden;
 	text-overflow: ellipsis;
 	float: right;
-	width: calc(100% - 20px);
-	height: 30px;
+	height: 40px;
+	width: 100%;
+	white-space: nowrap;
 }
 .alertItem .text {
-	font-size: 10px;
-	font-weight: bold;
+	font-size: 13px;
+	font-weight: normal;
+	margin-left: 5px;
 }
 
-.container
-{
+.container {
 	width: 90%;
 	padding: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.rowblock
-{
+.rowblock {
 	border: 1px solid #ccc;
 	width: 100%;
 	padding: 0px;
@@ -151,8 +139,7 @@ li a
 }
 .rowblock:empty { display: none; }
 
-.colblock_left
-{
+.colblock_left {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -160,8 +147,7 @@ li a
 	float: left;
 	margin-right: 8px;
 }
-.colblock_right
-{
+.colblock_right {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -169,24 +155,20 @@ li a
 	overflow: hidden;
 	word-wrap: break-word;
 }
-.colblock_left:empty { display: none; }
-.colblock_right:empty { display: none; }
+.colblock_left:empty, .colblock_right:empty { display: none; }
 
 /* The new method of doing columns layouts, colblock is now deprecated :( */
-.colstack_left
-{
+.colstack_left {
 	float: left;
 	width: 30%;
 	margin-right: 8px;
 }
-.colstack_right
-{
+.colstack_right {
 	float: left;
 	width: 65%;
 	width: calc(70% - 15px);
 }
-.colstack_item
-{
+.colstack_item {
 	border: 1px solid #ccc;
 	padding: 0px;
 	padding-top: 0px;
@@ -205,6 +187,7 @@ li a
 	/*grid-gap: 15px;*/
 	grid-gap: 12px;
 	margin-left: 5px;
+	margin-top: 2px;
 }
 .grid_item {
 	border: 1px solid #ccc;
@@ -224,7 +207,7 @@ li a
 }
 .grid_istat {
 	/*margin-bottom: 10px;*/
-	margin-bottom: 5px;
+	margin-bottom: 3px;
 }
 
 .stat_green { background-color: lightgreen; border-color: lightgreen; }
@@ -232,29 +215,19 @@ li a
 .stat_red { background-color: #ffb2b2; border-color: #ffb2b2; }
 .stat_disabled { background-color: lightgray; border-color: lightgray; }
 
-.rowhead { font-family: cursive; }
-.rowitem
-{
+.rowitem {
 	width: 100%;
 	padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 12px;
 	padding-bottom: 12px;
-	font-weight: bold;
-	text-transform: uppercase;
 	background-color: white;
+	font-family: cursive;
 }
-.rowitem.passive
-{
-	font-weight: normal;
-	text-transform: none;
-}
-.rowitem:not(:last-child)
-{
+.rowitem:not(:last-child) {
 	border-bottom: 1px dotted #ccc;
 }
-.rowitem a
-{
+.rowitem a {
 	text-decoration: none;
 	color: black;
 }
@@ -262,39 +235,7 @@ li a
 .top_post { margin-bottom: 16px; }
 .opthead { display: none; }
 
-.col_left
-{
-	width: 30%;
-	float: left;
-}
-.col_right
-{
-	width: 69%;
-	overflow: hidden;
-}
-.colitem
-{
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-top: 17px;
-	padding-bottom: 12px;
-	font-weight: bold;
-	text-transform: uppercase;
-}
-.colitem.passive
-{
-	font-weight: normal;
-	text-transform: none;
-}
-.colitem a
-{
-	text-decoration: none;
-	color: black;
-}
-.colitem a:hover { color: silver; }
-
-.formrow
-{
+.formrow {
 	width: 100%;
 	background-color: white;
 }
@@ -305,49 +246,51 @@ li a
 	display: table;
 }
 .formrow:after { clear: both; }
+.formrow:not(:last-child) { border-bottom: 1px dotted #ccc; }
 
-.formrow:not(:last-child)
-{
-	border-bottom: 1px dotted #ccc;
-}
-
-.formitem
-{
+.formitem {
 	float: left;
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-top: 13px;
-	padding-bottom: 8px;
-	font-weight: bold;
+	padding: 10px;
+	min-width: 20%;
+	/*font-size: 17px;*/
+	font-weight: normal;
 }
-
-.formitem:first-child { font-weight: bold; }
 .formitem:not(:last-child) { border-right: 1px dotted #ccc; }
 .formitem.invisible_border { border: none; }
 
 /* Mostly for textareas */
 .formitem:only-child { width: 100%; }
-.formitem textarea
-{
+.formitem textarea {
 	width: 100%;
 	height: 100px;
 	outline-color: #8e8e8e;
 }
-.formitem:has-child()
-{
+.formitem:has-child() {
 	margin: 0 auto;
 	float: none;
 }
+.formitem:not(:only-child) input, .formitem:not(:only-child) select { padding: 3px;/*5px;*/ }
+.formitem:not(:only-child).formlabel {
+	padding-top: 15px;/*18px;*/
+	padding-bottom: 12px;/*16px;*/
+	/*padding-left: 15px;*/
+}
+.formbutton {
+	padding: 7px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 15px;
+	border-color: #ccc;
+}
 
-button
-{
+button {
 	background: white;
 	border: 1px solid #8e8e8e;
 }
 
 /* Topics */
-.topic_status
-{
+.topic_status {
 	text-transform: none;
 	margin-left: 8px;
 	padding-left: 2px;
@@ -360,8 +303,7 @@ button
 }
 .topic_status:empty { display: none; }
 
-.username
-{
+.username, .panel_tag {
 	text-transform: none;
 	margin-left: 0px;
 	padding-left: 0px;
@@ -372,13 +314,16 @@ button
 	font-size: 15px;
 	background: none;
 }
-button.username
-{
+button.username {
 	position: relative;
 	top: -0.25px;
 }
 .username.level { color: #303030; }
-.username.real_username { color: #404040; font-size: 17px; padding-right: 4px; }
+.username.real_username {
+	color: #404040;
+	font-size: 16px;
+	padding-right: 4px;
+}
 .username.real_username:hover { color: black; }
 
 .tag-text {
@@ -386,35 +331,78 @@ button.username
 	display: inline-block;
 }
 
-.post_item > .username {
-	padding-top: 23px;
+.controls > .username {
 	display: inline-block;
-}
-
-.tag-mini
-{
-	text-transform: none;
-	margin-left: 0px;
-	padding-left: 3px;
-	padding-right: 3px;
-	padding-top: 1.5px;
 	padding-bottom: 0px;
-	color: #505050; /* 80,80,80 */
-	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
-	border-width: 1px;
-	font-size: 10px;
 }
 
-.post_item > .mod_button > button {
-	font-size: 15px;
+.real_username {
+	margin-right: -8px;
+}
+
+.mod_button > button {
+	font-family: cursive;
+	font-size: 12px;
 	color: #202020;
 	opacity: 0.7;
 	border: none;
 }
 .post_item > .mod_button > button:hover {
 	opacity: 0.9;
+}
+
+.mod_button:not(:last-child) {
+	margin-right: 4px;
+}
+
+.like_label:before {
+	content: "+1";
+}
+.like_count_label:before {
+	content: "likes";
+}
+.like_count_label {
+	color: #202020;
+	opacity: 0.7;
+	font-size: 12px;
+}
+.like_count {
+	color: #202020;
+	opacity: 0.7;
+	padding-left: 1px;
+	padding-right: 2px;
+	font-size: 12px;
+}
+.like_count:before {
+	content: "|";
+	margin-right: 5px;
+}
+.edit_label:before {
+	content: "Edit";
+}
+.trash_label:before {
+	content: "Delete";
+}
+.pin_label:before {
+	content: "Pin";
+}
+.unpin_label:before {
+	content: "Unpin";
+}
+.flag_label:before {
+	content: "Flag";
+}
+.level_label {
+	margin-right: 1px;
+}
+.level_label:before {
+	content: "Level";
+}
+
+.controls {
+	margin-top: 23px;
+	display: inline-block;
+	width: 100%;
 }
 
 .action_item {
@@ -433,37 +421,34 @@ button.username
 	margin-bottom: 8px;
 }
 
-.mention {
-	font-weight: bold;
-}
-
 .level {
 	float: right;
-	color: #505050;
 	border-left: none;
 	padding-left: 3px;
 	padding-right: 5px;
-	font-size: 16px;
+	font-family: cursive;
+	font-size: 15px;
+	color: #202020;
+	opacity: 0.7;
+	border: none;
 }
 
+.mention { font-weight: bold; }
 .show_on_edit { display: none; }
-.alert
-{
+.alert {
 	display: block;
 	padding: 5px;
 	margin-bottom: 10px;
 	border: 1px solid #ccc;
 }
-.alert_success
-{
+.alert_success {
 	display: block;
 	padding: 5px;
 	border: 1px solid A2FC00;
 	margin-bottom: 10px;
 	background-color: DAF7A6;
 }
-.alert_error
-{
+.alert_error {
 	display: block;
 	padding: 5px;
 	border: 1px solid #FF004B;
@@ -495,6 +480,104 @@ button.username
 .prev_button { left: 14px; }
 .next_button { right: 14px; }
 
+.head_tag_upshift {
+	color: #202020;
+	opacity: 0.7;
+	font-size: 12px;
+}
+
+/* Control Panel */
+
+.tag-mini {
+	margin-left: 0px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+
+	font-family: cursive;
+	font-size: 12px;
+	color: #202020;
+	opacity: 0.7;
+}
+
+.panel_floater {
+	float: right;
+}
+#panel_groups > .rowitem > .panel_floater {
+	float: none;
+}
+#panel_groups > .rowitem > .panel_floater > .panel_right_button {
+	float: right;
+}
+#panel_forums > .rowitem > .panel_floater {
+	float: none;
+}
+#panel_forums > .rowitem > .panel_floater > .panel_buttons {
+	float: right;
+}
+#panel_forums > .rowitem > .panel_floater > .panel_buttons > .panel_right_button {
+	color: #505050;
+	font-size: 14px;
+}
+.panel_rank_tag, .forum_preset, .forum_active {
+	float: none;
+	color: #202020;
+	opacity: 0.7;
+	font-size: 10px;
+}
+.panel_rank_tag_admin:before {
+	content: "Admin Group";
+}
+.panel_rank_tag_mod:before {
+	content: "Mod Group";
+}
+.panel_rank_tag_banned:before {
+	content: "Banned Group";
+}
+.panel_rank_tag_guest:before {
+	content: "Guest Group";
+}
+.panel_rank_tag_member:before {
+	content: "Member Group";
+}
+
+.forum_preset_announce:after {
+	content: "Announcements";
+}
+.forum_preset_members:after {
+	content: "Member Only";
+}
+.forum_preset_staff:after {
+	content: "Staff Only";
+}
+.forum_preset_admins:after {
+	content: "Admin Only";
+}
+.forum_preset_archive:after {
+	content: "Archive";
+}
+.forum_preset_all:after {
+	content: "Public";
+}
+.forum_preset_custom, .forum_preset_ {
+	display: none !important;
+}
+.forum_active_Hide:before {
+	content: "Hidden";
+}
+.forum_active_Hide + .forum_preset:before {
+	content: " | ";
+}
+.forum_active_Show {
+	display: none !important;
+}
+@media(max-width: 1300px) {
+	.theme_row {
+			background-image: none !important;
+	}
+}
+
 @media (max-width: 880px) {
 	li {
 		height: 29px;
@@ -514,18 +597,21 @@ button.username
 		padding-right: 7px;
 		font-size: 18px;
 	}
-	
-	body { padding-left: 4px; padding-right: 4px; margin: 0px !important; width: 100% !important; height: 100% !important; overflow-x: hidden; }
+
+	body {
+		padding-left: 4px;
+		padding-right: 4px;
+		margin: 0px !important;
+		width: 100% !important;
+		height: 100% !important;
+		overflow-x: hidden;
+	}
 	.container { width: auto; }
 	.selectedAlert .alertList { top: 37px; right: 4px; }
 }
 
 @media (max-width: 810px) {
-	.rowitem { text-transform: none; }
-	/*.rowhead { font-family: arial; }
-	.menu_left { font-family: arial; }*/
 	body { font-family: arial; }
-	.level { font-size: 17px; }
 }
 
 @media (max-width: 700px) {
@@ -540,35 +626,56 @@ button.username
 	.menu_left { padding-right: 5px; padding-top: 1px; }
 	.menu_right { padding-right: 5px; }
 	.menu_create_topic { display: none;}
-	
+
 	.menu_alerts {
 		padding-left: 4px;
 		padding-right: 4px;
 		font-size: 16px;
 		padding-top: 1px;
 	}
-	.menu_alerts .alert_counter {
-		top: -23px;
-		left: 8px;
-	}
+	.menu_alerts .alert_counter { top: -23px; left: 8px; }
 	.selectedAlert .alertList { top: 33px; }
-	
+
 	.hide_on_mobile { display: none; }
 	.prev_button, .next_button { top: auto; bottom: 5px; }
 	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
 	.grid_istat { margin-bottom: 0px; }
 }
 
+@media (max-width: 350px) {
+	.hide_on_micro { display: none !important; }
+}
+
 @media (max-width: 470px) {
-	.menu_overview { display: none; }
-	.menu_profile { display: none; }
-	.hide_on_micro { display: none; }
-	.post_container {
-		overflow: visible !important;
+	.menu_overview, .menu_profile, .hide_on_micro { display: none; }
+	.selectedAlert .alertList {
+		width: 135px;
+		margin-bottom: 5px;
 	}
+	.alertItem.withAvatar {
+		background-size: 36px;
+		text-align: right;
+		padding-left: 10px;
+		height: 46px;
+	}
+	.alertItem {
+		padding: 8px;
+	}
+	.alertItem.withAvatar .text {
+		width: calc(100% - 20px);
+		height: 30px;
+		white-space: normal;
+	}
+	.alertItem .text {
+		font-size: 10px;
+		font-weight: bold;
+		margin-left: 0px;
+	}
+
+	.post_container { overflow: visible !important; }
 	.post_item {
 		background-position: 0px 2px !important;
-		background-size: 64px 64px !important;
+		background-size: 64px auto !important;
 		padding-left: 2px !important;
 		min-height: 96px;
 		position: relative !important;
@@ -576,6 +683,7 @@ button.username
 	.post_item > .user_content {
 		margin-left: 75px !important;
 		width: 100% !important;
+		min-height: 45px;
 	}
 	.post_item > .mod_button {
 		float: right !important;
@@ -583,9 +691,7 @@ button.username
 		position: relative;
 		top: -14px;
 	}
-	.post_item > .mod_button > button {
-		opacity: 1;
-	}
+	.post_item > .mod_button > button { opacity: 1; }
 	.post_item > .real_username {
 		position: absolute;
 		top: 70px;
@@ -596,6 +702,11 @@ button.username
 		width: 60px;
 		font-size: 15px;
 		text-align: center;
+	}
+	.post_item > .controls {
+		margin-top: 0px;
+		margin-left: 74px;
+		width: calc(100% - 74px);
 	}
 	.container { width: 100% !important; }
 }
